--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,6 +12,9 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.7.11
+  -  Added language files
+     * Smalltalk (Bananeweizen)
 Version 1.0.7.10
   -  Added language files
      * TCL (Reid van Melle)
