--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -90,6 +90,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - SAS			Galen Johnson
 - SDLBasic		Roberto Rossi
 - Scheme			Jon Raphaelson
+- Smalltalk			Bananeweizen
 - Smarty			Alan Juden
 - T-SQL			Duncan Lock
 - Text			SmokingRope
