--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -15,6 +15,8 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.7.11
   -  Added language files
      * Smalltalk (Bananeweizen)
+  -  Minor style improvements to matlab
+  -  Moved a couple of functions to the correct group in smarty (arwan)
 Version 1.0.7.10
   -  Added language files
      * TCL (Reid van Melle)
