--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,6 +12,11 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.7.13
+  -  Added language files
+     * Uno IDL (Cedric Bosdonnat)
+  -  Fixed add_ids causing odd XHTML (RyanJ)
+  -  Fixed extra newline being added to end of result (Andreas Gohr)
 Version 1.0.7.12
   -  Fixed lines being collapsed when they contain just a space (artlover)
   -  Allowed matching for regexes using start/end matchers at the start/end
