--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -95,6 +95,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - T-SQL			Duncan Lock
 - Text			SmokingRope
 - TCL			Reid van Melle
+- thinBasic     Eros Olmi
 - Uno IDL		Cedric Bosdonnat
 - VB.NET		Alan Juden
 - VisualFoxPro	Roberto Armellin
