Added LaTeX language file (Matthais Pospiech)

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -71,6 +71,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Inno			Thomas Klinger
 - Java 5		Clemens Bruckmann
 - Javascript	Ben Keen
+- LaTeX         Matthais Pospiech
 - Lisp			Roberto Rossi
 - Lua			Roberto Rossi
 - MPASM			Bakalex
