--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,10 +12,13 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.7.14
+  -  Added language files
+     * thinBasic (Eros Olmi)
+     * LaTeX (Matthais Pospiech)
 Version 1.0.7.13
   -  Added language files
      * Uno IDL (Cedric Bosdonnat)
-     * thinBasic (Eros Olmi)
   -  Fixed add_ids causing odd XHTML (RyanJ)
   -  Fixed extra newline being added to end of result (Andreas Gohr)
 Version 1.0.7.12
