--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -13,6 +13,10 @@ Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.7.15
+  - Added language files
+     * BNF (Rowan Rodrik van der Molen)
+     * IO (me, thanks to Johnathan Wright)
+     * 
   -  Fixed use of colon in XML (Grigory Rubtsov)
 Version 1.0.7.14
   -  Added language files
