--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -21,6 +21,7 @@ Version 1.0.7.15
   -  Fixed notices in text.php, reg.php and latex.php when $this is not
      available (Clemens Weiß)
   -  Made third parameter of geshi_highlight optional (Gaetano Giunta)
+  -  Fix incorrect highlighting of the $# variable in bash (Michael Knight)
 Version 1.0.7.14
   -  Added language files
      * thinBasic (Eros Olmi)
