--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,6 +12,11 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.7.16
+  -  Added language files
+     * PL/SQL ()
+  -  Fixed up my e-mail address everywhere
+  -  Fixed notice with "error" property (IZIU Zielona Góra)
 Version 1.0.7.15
   - Added language files
      * BNF (Rowan Rodrik van der Molen)
