--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -14,9 +14,12 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.7.16
   -  Added language files
+     * C++/QT (Iulian M)
      * PL/SQL ()
   -  Fixed up my e-mail address everywhere
   -  Fixed notice with "error" property (IZIU Zielona Góra)
+  -  Added some entries to the get_language_name_from_extension table
+     (Stebastian Schuberth)
 Version 1.0.7.15
   - Added language files
      * BNF (Rowan Rodrik van der Molen)
