Added PL/SQL language file (Victor Engmark)

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -87,6 +87,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Oracle 8		Guy Wicks
 - Pascal		Tux
 - Perl			Andreas Gohr, Ben Keen
+- PL/SQL        Victor Engmark
 - Python		Roberto Rossi
 - Reg			SmokingRope
 - Robots		Christian Lescuyer
