--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -15,7 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.7.16
   -  Added language files
      * C++/QT (Iulian M)
-     * PL/SQL ()
+     * PL/SQL (Victor Engmark)
   -  Fixed up my e-mail address everywhere
   -  Fixed notice with "error" property (IZIU Zielona Góra)
   -  Added some entries to the get_language_name_from_extension table
