--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -13,6 +13,7 @@ Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.7.17
+  -  Fixed up ends of files having too many newlines (binarygroop)
   -  Removed background colour on keyword group in eiffel (Julian Tschannen)
 Version 1.0.7.16
   -  Added language files
