Removed the GESHI_DIR_SEPARATOR constant, it's unnecessary (aleksey Zapparov)

--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.7.17
   -  Fixed up ends of files having too many newlines (binarygroop)
   -  Removed background colour on keyword group in eiffel (Julian Tschannen)
+  -  Removed GESHI_DIR_SEPARATOR constant usage, it's unnecessary (Aleksey Zapparov)
 Version 1.0.7.16
   -  Added language files
      * C++/QT (Iulian M)
