--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,6 +12,11 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to nigel@geshi.org, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.7.18
+  -  Fixed incorrect highlighting when the starter of a multiline comment is
+     longer than the ender (Robert Anthony).
+  -  Fixed "</span" generated if a multiline comment is the last thing in the
+     source (related to the above).
 Version 1.0.7.17
   -  Fixed up ends of files having too many newlines (binarygroop)
   -  Removed background colour on keyword group in eiffel (Julian Tschannen)
