--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -18,6 +18,7 @@ Version 1.0.7.18
   -  Fixed "</span" generated if a multiline comment is the last thing in the
      source (related to the above).
   -  Added #cs => #ce comment markers to AutoIT (Robert Anthony)
+  -  Fixed spelling mistake for keyword in Python (wd3)
 Version 1.0.7.17
   -  Fixed up ends of files having too many newlines (binarygroop)
   -  Removed background colour on keyword group in eiffel (Julian Tschannen)
