--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -16,6 +16,7 @@ Version 1.0.7.20
   -  Added language files
      * Per (forms) (FOURJ's Genero 4GL)
      * Haskell (Dagit)
+     * ABAP (Andres Picazo)
   -  Fixed java documentation search for keywords to actually go to the
      documentation (spaze)
   -  Applied fix for bug 1688864 (bad regexes) (Tim Starling)
