--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -14,7 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.7.20
   -  Added language files
-     * Per (forms) (FOURJ's Genero 4GL)
+     * Genero (logic) and Per (forms) (FOURJ's Genero 4GL) (Lars Gersmann)
      * Haskell (Dagit)
      * ABAP (Andres Picazo)
      * Motorola 68k Assembler (for MC68HC908GP32 Microcontroller) (BenBE)
