--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -9,10 +9,12 @@ changes - thanks to all who suggested these ideas and gave me the code to show m
 Language files listed under each version were made by the author beside them, and then
 modified by me for consistency/bug fixing.
 
-Please send any bug reports to nigel@geshi.org, or use the bug report tracker
+Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.7.21
+  -  Added language files
+     * Basic4GL (Matthew Webb)
   -  Fixed problem with mIRC language highlighting spaces only (BenBE)
   -  Language files can now specify a function to be called to decide the
      colour of a regular expression match
@@ -33,7 +35,12 @@ Version 1.0.7.21
   -  Fixed highlighting error in bash language avoiding keywords in comments (SF #1786314, SF #1564839, BenBE)
   -  Fixed template params for C++ and C# not being highlighted (SF #1772919, BenBE)
   -  Fixed more reported problems about mirc highlighting
+  -  Added some missing keywords for VB.NET
   -  Fixed some warnings in DOS language file (Florian Angehrn)
+  -  Add possibility to handle more than one extra line style (SF #1698255, German Rumm, BenBE)
+  -  Fixed handling of URLs when output case differs from URL case (SF #1815504, Tom Samstag, BenBE)
+  -  Fixed POD (Plain Old Documentation) format problems breaking highlighting of Perl (SF #1891630, Shannon Wynter, BenBE)
+  -  Fixed a problem with mIRC when & was used for identifiers (SF #1875552, BenBE)
 Version 1.0.7.20
   -  Added language files
      * Genero (logic) and Per (forms) (FOURJ's Genero 4GL) (Lars Gersmann)
