--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -32,7 +32,7 @@ Version 1.0.7.22
   -  Added possibility to match a regexp as comment (SF#1914640, SF#1945301, SF#1934832, BenBE)
   -  Introduced C-Style multiline continuation comments (SF#1914640, SF#1945301, BenBE)
   -  Introduced Fortran Comments (SF#1914640, SF#1934832, BenBE)
-  -  Implemented Heredoc Syntax for PHP and Perl (SF#1914640, BenBE)
+  -  Implemented Heredoc and Nowdoc Syntax for PHP and Perl (SF#1914640, BenBE)
   -  Implemented Compiler Directives for Delphi (SF#1914640, BenBE)
   -  Implemented minimalistic support for JavaScript \ Perl Regular Expressions (SF#1786665, SF#1754333, SF#1956631, BenBE)
   -  Fixed Strings in Matlab to be handled as comments instead of regexps, to prevent keywords being linked (BenBE)
@@ -45,7 +45,9 @@ Version 1.0.7.22
   -  Added backticks as symbols (Milian Wolff)
   -  Example script remembers selections and source submitted (Milian Wolff)
   -  Example script allows remembered source and preselected language to be cleared (Milian Wolff)
+  -  Example script now properly includes geshi and doesn't suppress error messages anylonger. (Milian Wolff)
   -  Code cleanup by using direct string indexing instead of substr with length 1 (Milian Wolff)
+  -  Optimized generation of code parts in strict mode (Milian Wolff)
   -  First of series of color scheme changes. Affected languages (sofar):
      * Assembler (x86)
      * Bash
