--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -16,7 +16,11 @@ Version 1.0.7.22
   -  Added language files
      * glSlang (BenBE)
      * KiXtart (Riley McArdle)
+     * Lotus Notes @Formulas (Richard Civil)
+     * LotusScript (Richard Civil)
+     * MXML (David Spurr)
      * Scala (Franco Lombardo)
+     * ActionScript 3 (Jordi Boggiano)
   -  Fixed a problem not yet addressed in 1.0.7.21 regarding highlighting of
      symbols that caused some extra characters to be added in the output or
      broke highlighting and standard compliance due to missing escaping of
@@ -48,6 +52,13 @@ Version 1.0.7.22
   -  Example script now properly includes geshi and doesn't suppress error messages anylonger. (Milian Wolff)
   -  Code cleanup by using direct string indexing instead of substr with length 1 (Milian Wolff)
   -  Optimized generation of code parts in strict mode (Milian Wolff)
+  -  Optimized COMMENT_REGEXP by using an incremental regexp cache (Milian Wolff, BenBE)
+  -  Fixed a problem that rarely skipped highlighting of escaped chars which usually should have gotten highlighted (BenBE)
+  -  Optimized generation of highlighted strings to use fast skip forward while highlighting them (Milian Wolff, BenBE)
+  -  Optimization using basic rework of indent function improving tab expansion performance (BenBE)
+  -  Lots of other minor optimizations based on coding style improvements (Milian Wolff)
+  -  Implemented setting to force spans to be closed before newlines, see SF#1727398 (Milian Wolff)
+  -  Added missing credits for D language file to THANKS file (SF#1720899, BenBE)
   -  First of series of color scheme changes. Affected languages (sofar):
      * Assembler (x86)
      * Bash
@@ -153,6 +164,7 @@ Version 1.0.7.17
   -  Added /* ... */ comments to coldfusion (Jeff Howden)
 Version 1.0.7.16
   -  Added language files
+     * ActionScript (Steffen Krause)
      * C++/QT (Iulian M)
      * PL/SQL (Victor Engmark)
   -  Fixed up my e-mail address everywhere
