--- a/src/docs/TODO
+++ b/src/docs/TODO
@@ -21,8 +21,11 @@ http://sourceforge.net/tracker/?group_id=114997&atid=670234
 - Add option for "standards compliant" or "default" modes, where standards
   compliance generates the <pre> tags within the <li>s and non compliant mode
   does what happens currently.
-
-
+- use analogous vars to $next_comment_regexp_pos for more GeSHi structures,
+  should reduce number of functions called and hence improve performance
+- parse_non_string_part: $sym_search should be cached.
+  
+  
   TODO for version 1.2.0
 
 - Rewrite engine to use remove/replace method (will hopefully almost
