fix: Fix documentation links for LaTeX

--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,6 +12,9 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.8.12
+  -  Improvements to language files (BenBE)
+     * Updated Documentation Link for LaTeX (Johannes Ähling)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
