--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -15,6 +15,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 Version 1.0.8.12
   -  Improvements to language files (BenBE)
      * Updated Documentation Link for LaTeX (Johannes Ähling)
+     * Fix some highlighting problems with Octave (Carnë Draug, Juan Pablo Carbajal)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
