add: Add SCL language file by Leonhard Hösch

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -208,6 +208,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - SAS                    Galen Johnson
 - Scheme                 Jon Raphaelson
 - SciLab                 Christophe David
+- SCL                    Leonhard Hösch
 - SDLBasic               Roberto Rossi
 - Smalltalk              Bananeweizen
 - Smarty                 Alan Juden
