--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -13,6 +13,8 @@ Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.12
+  -  Added language files
+     * SCL (Leonhard Hösch)
   -  Improvements to language files (BenBE)
      * Updated Documentation Link for LaTeX (Johannes Ähling)
      * Fix some highlighting problems with Octave (Carnë Draug, Juan Pablo Carbajal)
