--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -18,6 +18,7 @@ Version 1.0.8.12
   -  Improvements to language files (BenBE)
      * Updated Documentation Link for LaTeX (Johannes Ähling)
      * Fix some highlighting problems with Octave (Carnë Draug, Juan Pablo Carbajal)
+     * Fix a minor issue with comments in Visual Basic (Plançon, BenBE)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
