add: Add nginx configuration language file by Cliff Wells, Deoren Moor and Thomas Joiner

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -159,6 +159,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - MySQL                  Carl Fürstenberg, Marjolein Katsma
 - Nagios                 Albéric de Pertat
 - NewLisp                cormullion
+- nginx                  Cliff Wells, Deoren Moor, Thomas Joiner
 - NSIS                   Tux, Deguix
 - Oberon-2               Mike Mol
 - Objeck Progr. Lang.    Randy Hollines
