add: Added C/C++ support for WinAPI-related sources

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -73,9 +73,11 @@ PEOPE WHO MADE LANGUAGE FILES
 - Brainfuck \ Brainfork  Benny Baumann
 - C for Loadrunner       Stuart Moncrieff
 - C for Macs             M. Uli Kusterer
+- C for Windows          Benny Baumann
 - C#                     Alan Juden
 - C++                    Dennis Bayer, M. Uli Kusterer
-- C++/Qt                 Iulian M
+- C++ (Qt)               Iulian M
+- C++ for Windows        Benny Baumann
 - CADDCL                 Roberto Rossi
 - CadLisp                Roberto Rossi
 - CDFG                   John Horigan
