fix: Force separate line for comments in INI files

--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -24,6 +24,7 @@ Version 1.0.8.12
      * Fix some highlighting problems with Octave (Carnë Draug, Juan Pablo Carbajal)
      * Fix a minor issue with comments in Visual Basic (Plançon, BenBE)
      * Fix a minor issue with keywords in SQL (Gerrit, BenBE)
+     * Force comments in INI files to be their own line (BenBE)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
