--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -233,6 +233,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Vala                   Nicolas Joseph
 - VB                     Roberto Rossi
 - VB.NET                 Alan Juden
+- VBScript               Rory Prendergast
 - Vedit                  Pauli Lindgren
 - Verilog                Günter Dannoritzer
 - VHDL                   Alexander 'E-Razor' Krause, Kevin Thibedeau
