add: Add AIMMS language file by Guido Diepen

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -50,6 +50,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Actionscript           Steffen Krause (french translation by NikO)
 - ActionScript 3         Jordi Boggiano (version for ActionScript3 and MXML)
 - Ada                    Tux
+- AIMMS                  Guido Diepen
 - Algol68                Neville Dempsey
 - Apache                 Tux
 - Applescript            Stephan Klimek
