--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -134,6 +134,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - J                      Ric Sherlock
 - Java 5                 Clemens Bruckmann
 - Javascript             Ben Keen
+- Job Control Language   Ramesh Vishveshwar
 - jQuery                 Rob Loach
 - KiXtart                Riley McArdle
 - KLone C                Mickael Auger
