add: Add EZT language file by Ramesh Vishveshwar

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -104,6 +104,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - EPC                    Thorsten Muehlfelder
 - Erlang                 Benny Baumann, Dan Forest-Barbier, Uwe Dauernheim
 - Euphoria               Nicholas Koceja
+- EZT                    Ramesh Vishveshwar
 - F#                     Julien Ortin
 - Falcon                 billykater
 - FO (abas-ERP)          Tan-Vinh Nguyen
