add: Add ISPF Panel language file by Ramesh Vishveshwar

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -132,6 +132,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Ini                    Deguix
 - Inno                   Thomas Klinger
 - INTERCAL               Benny Baumann
+- ISPF Panel             Ramesh Vishveshwar
 - J                      Ric Sherlock
 - Java 5                 Clemens Bruckmann
 - Javascript             Ben Keen
