--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -18,6 +18,7 @@ Version 1.0.8.12
      * C with WinAPI (BenBE)
      * C++ with WinAPI (BenBE)
      * EZT (Ramesh Vishveshwar)
+     * ISPF Panel (Ramesh Vishveshwar)
      * Job Control Language (Ramesh Vishveshwar)
      * nginx (Cliff Wells, Deoren Moor, Thomas Joiner)
      * SCL (Leonhard Hösch)
