fix: Langcheck errors for Lua language file

--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -35,6 +35,7 @@ Version 1.0.8.12
      * Fix problem with T-SQL keyword highlighting (James Horsley, BenBE)
      * Some more keywords for Bash (BenBE)
      * Updated LSL2 language file (BenBE, Sei Lisa)
+     * Fixed langcheck errors in Lua langfile (BenBE)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
