--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -36,6 +36,7 @@ Version 1.0.8.12
      * Some more keywords for Bash (BenBE)
      * Updated LSL2 language file (BenBE, Sei Lisa)
      * Fixed langcheck errors in Lua langfile (BenBE)
+     * Fixed double quotes in Tcl (BenBE, stecue))
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
