--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -38,6 +38,7 @@ Version 1.0.8.12
      * Fixed langcheck errors in Lua langfile (BenBE)
      * Fixed double quotes in Tcl (BenBE, stecue)
      * Updated PARI/GP language file (Charles R Greathouse IV, BenBE)
+     * Updated Cobol language file (Edward Hart, BenBE)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
