upd: Updated THANKS file for COBOL

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -86,7 +86,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CIL                    Marcus Griep
 - Clojure                Jess Johnson
 - CMake                  Daniel Nelson
-- COBOL                  Benny Baumann
+- COBOL                  Benny Baumann, Edward Hart
 - CoffeeScript           Trevor Burnham
 - ColdFusion             Diego
 - Cuesheet               Benny Baumann
