--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -21,6 +21,7 @@ Version 1.0.8.12
      * ISPF Panel (Ramesh Vishveshwar)
      * Job Control Language (Ramesh Vishveshwar)
      * nginx (Cliff Wells, Deoren Moor, Thomas Joiner)
+     * Racket (Tim Brown)
      * SCL (Leonhard Hösch)
      * VBScript (Rory Prendergast)
   -  Allow for global setup of all keyword and comments style at once using '*' (BenBE)
