--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -205,6 +205,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - PyCon                  Benny Baumann
 - q/kdb+                 Ian Roddis
 - R / S+                 Ron Fredericks, Fernando H.F.P. da Rosa
+- Racket                 Tim Brown
 - Rails                  Moises Deniz
 - Rebol                  Lecanu Guillaume
 - Reg                    SmokingRope
