--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -207,6 +207,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - R / S+                 Ron Fredericks, Fernando H.F.P. da Rosa
 - Racket                 Tim Brown
 - Rails                  Moises Deniz
+- RBScript               Deng Wen Gang
 - Rebol                  Lecanu Guillaume
 - Reg                    SmokingRope
 - Rexx                   Jon Wolfers
