add: Chapel language file by Richard Molitor

--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -17,6 +17,7 @@ Version 1.0.8.12
      * AIMMS (Guido Diepen)
      * C with WinAPI (BenBE)
      * C++ with WinAPI (BenBE)
+     * Chapel (Richard Molitor)
      * EZT (Ramesh Vishveshwar)
      * ISPF Panel (Ramesh Vishveshwar)
      * Job Control Language (Ramesh Vishveshwar)
