--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -83,6 +83,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - CadLisp                Roberto Rossi
 - CDFG                   John Horigan
 - ChaiScript             Jason Turner, Jonathan Turner
+- Chapel                 Richard Molitor
 - CIL                    Marcus Griep
 - Clojure                Jess Johnson
 - CMake                  Daniel Nelson
