--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -242,7 +242,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - VB.NET                 Alan Juden
 - VBScript               Rory Prendergast
 - Vedit                  Pauli Lindgren
-- Verilog                Günter Dannoritzer
+- Verilog                Günter Dannoritzer, Tony Carrillo
 - VHDL                   Alexander 'E-Razor' Krause, Kevin Thibedeau
 - VIM Script             Swaroop C H
 - Visual FoxPro          Roberto Armellin
