add: Add Rust language file by Dave Hodder

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -215,6 +215,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Robots                 Christian Lescuyer
 - RPM Specification File Paul Grinberg
 - Ruby                   Amit Gupta, Moises Deniz
+- Rust                   Dave Hodder
 - SAS                    Galen Johnson
 - Scheme                 Jon Raphaelson
 - SciLab                 Christophe David
