--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -24,6 +24,7 @@ Version 1.0.8.12
      * nginx (Cliff Wells, Deoren Moor, Thomas Joiner)
      * Racket (Tim Brown)
      * RBScript (Deng Wen Gang)
+     * Rust (Dave Hodder)
      * SCL (Leonhard Hösch)
      * VBScript (Rory Prendergast)
   -  Allow for global setup of all keyword and comments style at once using '*' (BenBE)
