--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -92,6 +92,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - ColdFusion             Diego
 - Cuesheet               Benny Baumann
 - D                      Thomas Kuehne
+- Dart                   Edward Hart
 - DCL                    Petr Hendl
 - DCPU-16                Benny Baumann
 - DCS                    Stelio Passaris
