--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -30,6 +30,7 @@ Version 1.0.8.12
      * VBScript (Rory Prendergast)
   -  Allow for global setup of all keyword and comments style at once using '*' (BenBE)
   -  Non-persistent XSS in example contrib script (BenBE, present in intermediate dev versions)
+  -  Fix short tag usage to allow for configurations where short tags are disabled (BenBE)
   -  Improvements to language files (BenBE)
      * Updated Documentation Link for LaTeX (Johannes Ähling)
      * Fix some highlighting problems with Octave (Carnë Draug, Juan Pablo Carbajal)
