--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -48,6 +48,7 @@ Version 1.0.8.12
      * Updated Verilog language file (Tony Carrillo, BenBE)
      * Updated Lisp language file (Edward Hart, BenBE)
      * Updated list of Debian and Ubuntu releases (BenBE)
+     * Implemented C++11 string literal support (BenBE)
 Version 1.0.8.11
   -  Added language files
      * ARM (Marat Dukhan)
