--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -226,6 +226,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Smarty                 Alan Juden
 - SPARK                  Phil Thornley
 - SPARQL                 Karima Rafes
+- StandardML             eldesh
 - StoneScript            Archimmersion
 - SystemVerilog          Sean O'Boyle
 - TCL                    Reid van Melle
