add: Import updated language file by Timon Knigge

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -119,7 +119,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Genie                  Nicolas Joseph
 - Gettext                Milian Wolff
 - glSlang                Benny Baumann
-- GML                    José Jorge Enríquez Rodríguez
+- GML                    José Jorge Enríquez Rodríguez, Timon Knigge
 - GNU make               Neil Bird
 - Gnuplot                Milian Wolff
 - Go                     Markus Jarderot
