add: Add language file for QML syntax by J-P Nurmi

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -207,6 +207,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - Python for S60         Sohan Basak
 - PyCon                  Benny Baumann
 - q/kdb+                 Ian Roddis
+- QML                    J-P Nurmi
 - R / S+                 Ron Fredericks, Fernando H.F.P. da Rosa
 - Racket                 Tim Brown
 - Rails                  Moises Deniz
