--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -24,6 +24,7 @@ Version 1.0.8.12
      * Job Control Language (Ramesh Vishveshwar)
      * nginx (Cliff Wells, Deoren Moor, Thomas Joiner)
      * PostScript
+     * QML (J-P Nurmi)
      * Racket (Tim Brown)
      * RBScript (Deng Wen Gang)
      * Rust (Dave Hodder)
