--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -90,6 +90,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - COBOL                  Benny Baumann, Edward Hart
 - CoffeeScript           Trevor Burnham
 - ColdFusion             Diego
+- CSS                    Nigel McNie, Zéfling
 - Cuesheet               Benny Baumann
 - D                      Thomas Kuehne
 - Dart                   Edward Hart
