--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -23,6 +23,7 @@ Version 1.0.8.12
      * ISPF Panel (Ramesh Vishveshwar)
      * Job Control Language (Ramesh Vishveshwar)
      * nginx (Cliff Wells, Deoren Moor, Thomas Joiner)
+     * Nimrod (Dennis Felsing)
      * PostScript (BenBE)
      * QML (J-P Nurmi)
      * Racket (Tim Brown)
