--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -19,6 +19,7 @@ Version 1.0.8.13
   -  Fix handling of strings in Haskell (evancz, sid-kap)
   -  Add some more encoding constant keywords for PowerBuilder (dougporter)
   -  Many new keywords for C++ and onwards (Streussel)
+  -  Missing keywords in SQL (cblair91)
 Version 1.0.8.12
   -  Added language files
      * AIMMS (Guido Diepen)
