--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -18,6 +18,7 @@ Version 1.0.8.13
   -  Qt5 API for C++ language file (neochapay)
   -  Fix handling of strings in Haskell (evancz, sid-kap)
   -  Add some more encoding constant keywords for PowerBuilder (dougporter)
+  -  Many new keywords for C++ and onwards (Streussel)
 Version 1.0.8.12
   -  Added language files
      * AIMMS (Guido Diepen)
