Add the Mercury language (http://www.mercurylang.org), with the syntax based on Prolog

--- a/src/docs/THANKS
+++ b/src/docs/THANKS
@@ -160,6 +160,7 @@ PEOPE WHO MADE LANGUAGE FILES
 - MagikSF                Sjoerd van Leent
 - MapBasic               Tomasz Berus
 - mIRC                   Alberto de Areba Sánchez
+- Mercury                Sebastian Godelet
 - Modula 2               Benjamin Kowarsch
 - Modula-3               Martin Bishop
 - Motorola 6502 ASM      Warren Willmey
