--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -36,6 +36,7 @@ Version 1.0.8.12
      * EZT (Ramesh Vishveshwar)
      * ISPF Panel (Ramesh Vishveshwar)
      * Job Control Language (Ramesh Vishveshwar)
+     * Mercury (Sebastian Godelet)
      * nginx (Cliff Wells, Deoren Moor, Thomas Joiner)
      * Nimrod (Dennis Felsing)
      * PostScript (BenBE)
