--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -17,6 +17,7 @@ Version 1.0.8.13
   -  Fix compatibility for PHP 7 (pazuzu156)
   -  Qt5 API for C++ language file (neochapay)
   -  Fix handling of strings in Haskell (evancz, sid-kap)
+  -  Add some more encoding constant keywords for PowerBuilder (dougporter)
 Version 1.0.8.12
   -  Added language files
      * AIMMS (Guido Diepen)
