--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -14,6 +14,7 @@ at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
 Version 1.0.8.13
   -  Fix minor issue with CSS (BenBE)
+  -  Fix compatibility for PHP 7 (pazuzu156)
 Version 1.0.8.12
   -  Added language files
      * AIMMS (Guido Diepen)
