--- a/src/docs/CHANGES
+++ b/src/docs/CHANGES
@@ -12,6 +12,8 @@ modified by me for consistency/bug fixing.
 Please send any bug reports to BenBE@omorphia.de, or use the bug report tracker
 at sourceforge (http://sourceforge.net/tracker/?group_id=114997&atid=670231)
 
+Version 1.0.8.13
+  -  Fix minor issue with CSS (BenBE)
 Version 1.0.8.12
   -  Added language files
      * AIMMS (Guido Diepen)
